--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Dominic Barnes <dominic@dbarnes.info>",
   "license": "MIT",
   "dependencies": {
+    "array-flatten": "^2.0.0",
     "debug": "^2.2.0",
     "each-module": "^1.2.0",
     "koa-router": "^5.1.2",
