--- a/package.json
+++ b/package.json
@@ -20,10 +20,18 @@
     "methods": "^1.1.1"
   },
   "devDependencies": {
+    "@dominicbarnes/eslint-config": "*",
+    "@dominicbarnes/eslint-config-node": "*",
+    "@dominicbarnes/eslint-config-test": "*",
     "chai": "^3.2.0",
+    "eslint": "^1.10.3",
+    "eslint-plugin-mocha": "^1.1.0",
+    "eslint-plugin-require-path-exists": "^1.0.25",
     "mocha": "^2.2.5"
   },
   "scripts": {
+    "lint": "eslint .",
+    "pretest": "npm run lint",
     "test": "mocha"
   }
 }
