--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,11 @@
 {
-  "extends": [
-    "@dominicbarnes",
-    "@dominicbarnes/node"
-  ],
+  "extends": ["eslint:recommended"],
+  "env": {
+    "node": true
+  },
   "rules": {
     "no-invalid-this": 0,
-    "no-param-reassign": 1,
+    "no-param-reassign": 0,
     "require-yield": 0
   }
 }
