--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,6 +1,13 @@
 {
-  "extends": "@dominicbarnes/test",
   "rules": {
     "mocha/no-synchronous-tests": 0
+  },
+  "env": {
+    "node": true,
+    "es6": true,
+    "mocha": true
+  },
+  "ecmaFeatures": {
+    "generators": true
   }
 }
