--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   "license": "MIT",
   "dependencies": {
     "array-flatten": "^2.0.0",
-    "debug": "^2.2.0",
-    "each-module": "^1.2.0",
+    "debug": "^3.1.0",
+    "each-module": "^2.0.0",
     "methods": "^1.1.1"
   },
   "devDependencies": {
-    "chai": "^3.2.0",
-    "eslint": "^1.10.3",
-    "eslint-plugin-mocha": "^1.1.0",
+    "chai": "^4.1.2",
+    "eslint": "^4.16.0",
+    "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-require-path-exists": "^1.0.25",
     "koa": "^2.0.0",
     "koa-router": "^7.0.0",
     "methods": "^1.1.1",
-    "mocha": "^2.2.5",
+    "mocha": "^5.0.0",
     "supertest": "^3.0.0"
   },
   "peerDependencies": {
@@ -39,6 +39,6 @@
   "scripts": {
     "lint": "eslint .",
     "preteest": "npm run lint",
-    "test": "mocha"
+    "test": "mocha --exit"
   }
 }
