--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "A module that transforms a directory into a koa router",
   "main": "index.js",
   "repository": "dominicbarnes/koa-file-router",
-  "keywords": ["koa", "router", "file", "path"],
+  "keywords": [
+    "koa",
+    "router",
+    "file",
+    "path"
+  ],
   "author": "Dominic Barnes <dominic@dbarnes.info>",
-  "contributors": ["Daryl Roberts <daryl.roberts@gmail.com>"],
+  "contributors": [
+    "Daryl Roberts <daryl.roberts@gmail.com>"
+  ],
   "license": "MIT",
   "engines": {
-    "node": ">=8.9.0"
+    "node": ">=6"
   },
   "dependencies": {
     "array-flatten": "^2.0.0",
@@ -19,13 +26,11 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "eslint": "^4.16.0",
-    "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-require-path-exists": "^1.0.25",
     "koa": "^2.0.0",
     "koa-router": "^7.0.0",
     "methods": "^1.1.1",
     "mocha": "^5.0.0",
+    "standard": "^10.0.3",
     "supertest": "^3.0.0"
   },
   "peerDependencies": {
@@ -33,8 +38,8 @@
     "koa-router": "^7.0.0"
   },
   "scripts": {
-    "lint": "eslint .",
-    "preteest": "npm run lint",
+    "lint": "standard",
+    "pretest": "npm run lint",
     "test": "mocha --exit"
   }
 }
